# remote_switch_manager

./: Cargo.toml  README.md  package-lock.json  switches_sample.toml
.github/workflows/: ci.yml  setup.yml
frontend/: .env.development  package-lock.json  package.json
frontend/src/: App.vue  main.ts  utils.ts
frontend/src/assets/: main.css
frontend/src/components/: LoginForm.vue  Switches.vue  TimerManagementModal.vue
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue
src/: auth.rs  config.rs  devices.rs  main.rs  storage.rs  timers.rs  users.rs
src/devices/: http.rs  mod.rs  shelly.rs
src/timers/: http.rs  mod.rs
