[package]
name = "thermostats_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.9"
base64 = "0.22.1"
bytes = "1.8.0"
futures-util = "0.3.31"
http = "1.1.0"
http-body-util = "0.1.2"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simplelog = "0.12.2"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["auth"] }
uuid = { version = "1.11.0", features = ["v4"] }
