[package]
name = "remote_switch_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["tokio", "macros"] }
axum-macros = { version = "0.4.2" }
base64 = "0.22.1"
bytes = "1.8.0"
chrono = "0.4.38"
diqwest = "3.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.1.0"
http-body-util = "0.1.2"
log = "0.4.22"
mime_guess = "2.0.5"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
simplelog = "0.12.2"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["auth", "cors"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
